// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopConsumers /> renders Loading top consumers correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Top Consumers
    </DashboardCardTitle>
    <DashboardCardTitleHelp>
      Consumption bar is relative to biggest consumer which is always 100%
    </DashboardCardTitleHelp>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <ConsumersFilter>
      <Col
        bsClass="col"
        className="kubevirt-consumers__dropdown-type-filter"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <Dropdown
          choices={
            Array [
              Object {
                "description": "Workloads",
                "name": "Pods & VMs",
              },
              Object {
                "description": "Infrastructure",
                "name": "Nodes",
              },
            ]
          }
          disabled={false}
          id="type-dropdown"
          isKebab={false}
          onChange={[Function]}
          value={
            Object {
              "description": "Workloads",
              "name": "Pods & VMs",
            }
          }
          withTooltips={false}
        />
      </Col>
      <Col
        bsClass="col"
        className="kubevirt-consumers__dropdown-sort-filter"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <Dropdown
          choices={
            Array [
              Object {
                "description": "CPU Time",
                "name": "By CPU",
              },
              Object {
                "description": "Memory consumption",
                "name": "By Memory",
              },
              Object {
                "description": "Filesystem IO Time",
                "name": "By Storage",
              },
              Object {
                "description": "Network consumption",
                "name": "By Network",
              },
            ]
          }
          disabled={false}
          id="sort-by-dropdown"
          isKebab={false}
          onChange={[Function]}
          value={
            Object {
              "description": "CPU Time",
              "name": "By CPU",
            }
          }
          withTooltips={false}
        />
      </Col>
    </ConsumersFilter>
    <ConsumersResults
      LoadingComponent={[Function]}
      description="CPU Time"
      isLoading={true}
      type="Workloads"
    />
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<TopConsumers /> renders Not available top consumers correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Top Consumers
    </DashboardCardTitle>
    <DashboardCardTitleHelp>
      Consumption bar is relative to biggest consumer which is always 100%
    </DashboardCardTitleHelp>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <ConsumersFilter>
      <Col
        bsClass="col"
        className="kubevirt-consumers__dropdown-type-filter"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <Dropdown
          choices={
            Array [
              Object {
                "description": "Workloads",
                "name": "Pods & VMs",
              },
              Object {
                "description": "Infrastructure",
                "name": "Nodes",
              },
            ]
          }
          disabled={false}
          id="type-dropdown"
          isKebab={false}
          onChange={[Function]}
          value={
            Object {
              "description": "Workloads",
              "name": "Pods & VMs",
            }
          }
          withTooltips={false}
        />
      </Col>
      <Col
        bsClass="col"
        className="kubevirt-consumers__dropdown-sort-filter"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <Dropdown
          choices={
            Array [
              Object {
                "description": "CPU Time",
                "name": "By CPU",
              },
              Object {
                "description": "Memory consumption",
                "name": "By Memory",
              },
              Object {
                "description": "Filesystem IO Time",
                "name": "By Storage",
              },
              Object {
                "description": "Network consumption",
                "name": "By Network",
              },
            ]
          }
          disabled={false}
          id="sort-by-dropdown"
          isKebab={false}
          onChange={[Function]}
          value={
            Object {
              "description": "CPU Time",
              "name": "By CPU",
            }
          }
          withTooltips={false}
        />
      </Col>
    </ConsumersFilter>
    <ConsumersResults
      LoadingComponent={[Function]}
      description="CPU Time"
      isLoading={false}
      type="Workloads"
    />
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<TopConsumers /> renders Top Consumers correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Top Consumers
    </DashboardCardTitle>
    <DashboardCardTitleHelp>
      Consumption bar is relative to biggest consumer which is always 100%
    </DashboardCardTitleHelp>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <ConsumersFilter>
      <Col
        bsClass="col"
        className="kubevirt-consumers__dropdown-type-filter"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <Dropdown
          choices={
            Array [
              Object {
                "description": "Workloads",
                "name": "Pods & VMs",
              },
              Object {
                "description": "Infrastructure",
                "name": "Nodes",
              },
            ]
          }
          disabled={false}
          id="type-dropdown"
          isKebab={false}
          onChange={[Function]}
          value={
            Object {
              "description": "Workloads",
              "name": "Pods & VMs",
            }
          }
          withTooltips={false}
        />
      </Col>
      <Col
        bsClass="col"
        className="kubevirt-consumers__dropdown-sort-filter"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <Dropdown
          choices={
            Array [
              Object {
                "description": "CPU Time",
                "name": "By CPU",
              },
              Object {
                "description": "Memory consumption",
                "name": "By Memory",
              },
              Object {
                "description": "Filesystem IO Time",
                "name": "By Storage",
              },
              Object {
                "description": "Network consumption",
                "name": "By Network",
              },
            ]
          }
          disabled={false}
          id="sort-by-dropdown"
          isKebab={false}
          onChange={[Function]}
          value={
            Object {
              "description": "CPU Time",
              "name": "By CPU",
            }
          }
          withTooltips={false}
        />
      </Col>
    </ConsumersFilter>
    <ConsumersResults
      LoadingComponent={[Function]}
      description="CPU Time"
      isLoading={false}
      type="Workloads"
    >
      <ConsumerItem
        description="workload-cpu-key4"
        key="0"
        label="55.0"
        now={100}
      />
      <ConsumerItem
        description="workload-cpu-key5"
        key="1"
        label="45.0"
        now={82}
      />
      <ConsumerItem
        description="workload-cpu-key3"
        key="2"
        label="35.0"
        now={64}
      />
      <ConsumerItem
        description="workload-cpu-key2"
        key="3"
        label="25.0"
        now={45}
      />
      <ConsumerItem
        description="workload-cpu-key1"
        key="4"
        label="15.0"
        now={27}
      />
    </ConsumersResults>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<TopConsumers /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Top Consumers
    </h2>
    <button
      class="btn btn-link"
      type="button"
    >
      <span
        aria-hidden="true"
        class="fa fa-info-circle kubevirt-dashboard__icon-sm kubevirt-dashboard__heading-icon--info"
      />
    </button>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-consumers__filters"
    >
      <div
        class="kubevirt-consumers__dropdown-type-filter col-lg-6 col-md-6 col-sm-6 col-xs-6"
      >
        <div
          class="btn-group btn-group-justified"
        >
          <div
            class="pf-c-dropdown kubevirt-dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="pf-c-dropdown__toggle"
              id="pf-toggle-id-38"
              type="button"
            >
              <span
                class="pf-c-dropdown__toggle-text"
              >
                Pods & VMs
              </span>
              <svg
                aria-hidden="true"
                class="pf-c-dropdown__toggle-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  transform=""
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="kubevirt-consumers__dropdown-sort-filter col-lg-6 col-md-6 col-sm-6 col-xs-6"
      >
        <div
          class="btn-group btn-group-justified"
        >
          <div
            class="pf-c-dropdown kubevirt-dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="pf-c-dropdown__toggle"
              id="pf-toggle-id-39"
              type="button"
            >
              <span
                class="pf-c-dropdown__toggle-text"
              >
                By CPU
              </span>
              <svg
                aria-hidden="true"
                class="pf-c-dropdown__toggle-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  transform=""
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="kubevirt-consumers__results"
    >
      <div
        class="kubevirt-consumers__description row"
      >
        <div
          class="kubevirt-consumers__metric-type col-lg-4 col-md-4 col-sm-4 col-xs-4"
        >
          Workloads
        </div>
        <div
          class="kubevirt-consumers__metric-description col-lg-8 col-md-8 col-sm-8 col-xs-8"
        >
          CPU Time
        </div>
      </div>
      <div
        class="kubevirt-consumers__bar row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
        >
          <div
            class="kubevirt-consumers__bar-description"
          >
            workload-cpu-key4
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-column-progress col-lg-5 col-md-5 col-sm-5 col-xs-5"
        >
          <div
            class="progress kubevirt-consumers__bar-progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="100"
              class="progress-bar"
              role="progressbar"
              style="width:100%"
            />
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar progress-bar-remaining"
              role="progressbar"
              style="width:0%"
            />
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-label col-lg-3 col-md-3 col-sm-3 col-xs-3"
        >
          <span>
            55.0
          </span>
        </div>
      </div>
      <div
        class="kubevirt-consumers__bar row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
        >
          <div
            class="kubevirt-consumers__bar-description"
          >
            workload-cpu-key5
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-column-progress col-lg-5 col-md-5 col-sm-5 col-xs-5"
        >
          <div
            class="progress kubevirt-consumers__bar-progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="82"
              class="progress-bar"
              role="progressbar"
              style="width:82%"
            />
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="18"
              class="progress-bar progress-bar-remaining"
              role="progressbar"
              style="width:18%"
            />
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-label col-lg-3 col-md-3 col-sm-3 col-xs-3"
        >
          <span>
            45.0
          </span>
        </div>
      </div>
      <div
        class="kubevirt-consumers__bar row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
        >
          <div
            class="kubevirt-consumers__bar-description"
          >
            workload-cpu-key3
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-column-progress col-lg-5 col-md-5 col-sm-5 col-xs-5"
        >
          <div
            class="progress kubevirt-consumers__bar-progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="64"
              class="progress-bar"
              role="progressbar"
              style="width:64%"
            />
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="36"
              class="progress-bar progress-bar-remaining"
              role="progressbar"
              style="width:36%"
            />
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-label col-lg-3 col-md-3 col-sm-3 col-xs-3"
        >
          <span>
            35.0
          </span>
        </div>
      </div>
      <div
        class="kubevirt-consumers__bar row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
        >
          <div
            class="kubevirt-consumers__bar-description"
          >
            workload-cpu-key2
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-column-progress col-lg-5 col-md-5 col-sm-5 col-xs-5"
        >
          <div
            class="progress kubevirt-consumers__bar-progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="45"
              class="progress-bar"
              role="progressbar"
              style="width:45%"
            />
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="55"
              class="progress-bar progress-bar-remaining"
              role="progressbar"
              style="width:55%"
            />
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-label col-lg-3 col-md-3 col-sm-3 col-xs-3"
        >
          <span>
            25.0
          </span>
        </div>
      </div>
      <div
        class="kubevirt-consumers__bar row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
        >
          <div
            class="kubevirt-consumers__bar-description"
          >
            workload-cpu-key1
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-column-progress col-lg-5 col-md-5 col-sm-5 col-xs-5"
        >
          <div
            class="progress kubevirt-consumers__bar-progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="27"
              class="progress-bar"
              role="progressbar"
              style="width:27%"
            />
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="73"
              class="progress-bar progress-bar-remaining"
              role="progressbar"
              style="width:73%"
            />
          </div>
        </div>
        <div
          class="kubevirt-consumers__bar-label col-lg-3 col-md-3 col-sm-3 col-xs-3"
        >
          <span>
            15.0
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
